--- a/app/src/main/res/layout-port/recycler_adapter_history.xml
+++ b/app/src/main/res/layout-port/recycler_adapter_history.xml
@@ -9,12 +9,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/tv_title"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app_name"
         android:textSize="@dimen/text_primary"
         android:textStyle="bold"
         android:textColor="@color/black_text"
-        android:id="@+id/tv_from_to"
         android:maxLines="2"
         android:ellipsize="end"
         android:layout_alignParentTop="true"
@@ -25,12 +25,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tv_description"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/app_name"
         android:textColor="@color/black_secondary_text"
         android:textSize="@dimen/text_secondary"
-        android:id="@+id/tv_amount"
-        android:layout_below="@+id/tv_from_to"
+        android:layout_below="@+id/tv_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/tv_created_at"
@@ -51,7 +51,7 @@
         android:textColor="@color/black_secondary_text"
         android:textSize="@dimen/text_secondary"
         android:id="@+id/tv_created_at"
-        android:layout_below="@+id/tv_from_to"
+        android:layout_below="@+id/tv_title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:maxLines="1"
@@ -65,7 +65,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/one"
-        android:layout_below="@+id/tv_amount"
+        android:layout_below="@+id/tv_description"
         android:background="@color/black_divider"/>
 
 </RelativeLayout>
